[package]
name = "anansi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true