[package]
name = "anansid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["net", "rt", "rt-multi-thread", "io-util", "macros", "time", "sync"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true